# Genesis-Plus-GX

./: .gitignore
frontend/: CMakeLists.txt  CMakePresets.json  README.md  emu_runner.c  emu_runner.h  frontend_host.h  main.h  osd.h  sdl3_frontend.c
frontend/vstudio/: genplus_core_static.vcxproj  genplus_frontend.sln  genplus_frontend.vcxproj
sdl/: Makefile.sdl3  readme-sdl.txt
sdl/sdl3/: main.c
